# cloth-sim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
src/: main.cpp
src/sim/: cloth.cpp  cloth.h
src/util/: camera.cpp  camera.h  object.cpp  object.h  render.cpp  render.h  shader.cpp  shader.h  sphere.cpp  sphere.h
